--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "toastify-react-native": "^7.2.3"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
