feat: implement remote config integration for app updates, feedback modal, and template limits; add empty state components

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "workchecklist",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "expo": "~54.0.30",
     "expo-blur": "~15.0.8",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
